[package]
name = "rustdash"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustdash"
crate-type = ["cdylib", "rlib"]

[dependencies]
fancy-regex = "0.17.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
pythonize = "0.23"
regex = "1.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
